feat: Add collection view toggle with 3 view options (single, double, editorial)
- Implement JavaScript component for view switching with localStorage persistence
- Add CSS Grid layouts for single, double, and editorial (masonry) views
- Integrate toggle UI in collection template with SVG icons
- Add schema settings and translations for English locale
- Support responsive design across mobile, tablet, and desktop breakpoints

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -176,6 +176,10 @@
     "no_products": "No products in this collection",
     "product_show": "Showing",
     "all_products": "All Products",
+    "view": "View",
+    "view_single": "Single column",
+    "view_double": "Two columns",
+    "view_editorial": "Editorial",
     "product_count": {
       "one": "{{product_count}} of {{count}} product",
       "other": "{{product_count}} of {{count}} products"
